# so1_lab1_compatible_w_lab2_tmp

./: .gitignore  CMakeLists.txt
.github/actions/building/: action.yml
include/: expose_metrics.h  metrics.h
lib/: Doxyfile  Makefile  README.md
lib/prom/: CMakeLists.txt
lib/prom/include/: prom.h  prom_collector.h  prom_collector_registry.h  prom_counter.h  prom_gauge.h  prom_histogram.h  prom_histogram_buckets.h  prom_linked_list.h  prom_log.h  prom_metric.h  prom_metric_sample.h  prom_metric_sample_histogram.h  prom_string_builder.h
lib/prom/src/: prom_collector.c  prom_collector_registry.c  prom_collector_registry_i.h  prom_collector_registry_t.h  prom_collector_t.h  prom_counter.c  prom_gauge.c  prom_histogram.c  prom_histogram_buckets.c  prom_linked_list.c  prom_linked_list_i.h  prom_linked_list_t.h  prom_log.c  prom_map.c  prom_map_t.h  prom_metric.c  prom_metric_formatter.c  prom_metric_formatter_i.h  prom_metric_formatter_t.h  prom_metric_i.h  prom_metric_sample.c  prom_metric_sample_histogram.c  prom_metric_sample_histogram_i.h  prom_metric_sample_histogram_t.h  prom_metric_sample_i.h  prom_metric_sample_t.h  prom_metric_t.h  prom_process_collector.c  prom_process_collector_t.h  prom_process_fds.c  prom_process_fds_i.h  prom_process_limits.c  prom_process_limits_i.h  prom_process_stat.c  prom_process_stat_i.h  prom_process_stat_t.h  prom_string_builder.c
lib/promhttp/: CMakeLists.txt
lib/promhttp/include/: promhttp.h
lib/promhttp/src/: promhttp.c
src/: expose_metrics.c  main.c  metrics.c
